--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   z-index: 10;
-  margin-top: 20px;
+  /* margin-top: 20px; */ /* Navbar sits flush with top of browser now - Adam */
   margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
 }
 .navbar-wrapper .navbar {
