--- a/css/style.css
+++ b/css/style.css
@@ -64,15 +64,36 @@ a.logo{
   text-decoration: none;
 }
 
+#buttons {
+  margin:30px;
+  text-align: center !important;
+   white-space: nowrap;  
+    overflow: hidden; 
+}
+
+
 #intro { 
-	/*background: #fff 50% 0 fixed; */
-	height: auto;  
-	margin: 0 auto; 
+  /*background: #fff 50% 0 fixed; */
+  height: auto;  
+  margin: 0 auto; 
     width: 100%; 
     position: relative; 
     box-shadow: 0 0 50px rgba(0,0,0,0.8);
-    padding: 50px 0;
+    padding: 100px 0;
 }
+
+
+#pitch { 
+  text-align: center;
+  color: #fff;
+  background-color: #3498db;
+  height: 1000px;  
+  margin: 0 auto; 
+    width: 100%; 
+    position: relative; 
+    padding: 100px 0;
+}
+
 
 /*main app body*/
 
